--- a/libs/layout-sample/src/lib/ui/search-result-list-sample-data/search-result-list-sample-data.component.html
+++ b/libs/layout-sample/src/lib/ui/search-result-list-sample-data/search-result-list-sample-data.component.html
@@ -1,4 +1,4 @@
-<div class="sds-result-item">
+<div class="sds-result-item width-full">
 
   <!-- Item Heading -->
   <div class="grid-row grid-gap">
@@ -15,10 +15,10 @@
   </div>
 
   <!-- Item Data -->
-  <div class="grid-row grid-gap">
+  <div class="display-flex flex-row flex-wrap width-full">
 
     <!-- 1st column -->
-    <div class="tablet:grid-col-4 grid-col-12">
+    <div class="flex-auto width-mobile">
       <!-- Field Width -->
       <div class="grid-row">
 
@@ -125,7 +125,7 @@
     </div>
 
     <!-- 2nd column -->
-    <div class="tablet:grid-col-4 grid-col-12">
+    <div class="flex-auto width-mobile">
       <!-- Field Width -->
       <div class="grid-row">
 
@@ -213,7 +213,8 @@
       </div>
     </div>
 
-    <div class="tablet:grid-col-4 grid-col-12">
+    <!-- 3rd column -->
+    <div class="flex-auto width-mobile">
 
       <!-- Horizontal Config -->
       <div class="grid-row grid-gap-05">
