External link directory changes

--- a/apps/sam-design-system-site/src/app/app.component.html
+++ b/apps/sam-design-system-site/src/app/app.component.html
@@ -30,6 +30,13 @@
           </li>
 
           <li class="usa-sidenav__item">
+            <a [routerLink]="['component/external-link']" routerLinkActive="usa-current">
+              External Link
+            </a>
+          </li>
+
+
+          <li class="usa-sidenav__item">
             <a [routerLink]="['component/sideNav']" routerLinkActive="usa-current">
               Side-Menu Navigation
             </a>
